--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,6 @@
 version: 0.0.{build}
-image: Visual Studio 2017
+image: Visual Studio 2019
 before_build:
-- cmd: >-
-    dotnet restore
+    - nuget restore
 build_script:
-- cmd: >-
-    dotnet build
+    - dotnet build
