--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: 0.0.{build}
 image: Visual Studio 2019
 before_build:
-- dotnet restore
+- cmd: dotnet restore
 build_script:
 - dotnet build
